# ChangeLog for dev-java/dom4j
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/dom4j/ChangeLog,v 1.11 2004/06/24 22:25:11 agriffis Exp $

*dom4j-1.4-r1 (03 May 2004)

  03 May 2004; Karl Trygve Kalleberg <karltk@gentoo.org> dom4j-1.4-r1.ebuild:
  Added proper SLOTing.

  05 Apr 2004; Chris Aniszczyk <zx@gentoo.org> dom4j-1.3.ebuild,
  dom4j-1.4.ebuild:
  Clean up.

  18 Mar 2004; David Holm <dholm@gentoo.org> dom4j-1.4.ebuild:
  Added to ~ppc.

*dom4j-1.4 (24 Apr 2003)

  03 Mar 2003; Adrian Almenar <strider@gentoo.org> dom4j-1.4.ebuild:
  Updated to new version.

*dom4j-1.3 (31 Oct 2002)

  03 Mar 2003; <vladimir@gentoo.org> dom4j-1.3.ebuild:
  Fixed minor error in KEYWORDS

  04 Dec 2002; Adrian Almenar <strider@gentoo.org> dom4j-1.3.ebuild:
  Unmasking it.

  04 Nov 2002; Adrian Almenar <strider@gentoo.org> dom4j-1.3.ebuild:
  Changed KEYWORDS, removed other arch's cause i have not tested it
  leaving only ~x86. Some cosmetic changes.

  31 Oct 2002; Karl Trygve Kalleberg <karltk@gentoo.org> dom4j-1.3.ebuild files/digest-dom4j :
  Initial import.  Ebuild submitted by Adrian Almenar
  <aalmenar@conectium.com>.
