@@ -1,4 +1,4 @@
-MD5 76d8d2f6218562212d1925d2fc092a53 dbunit-2.0.ebuild 696
-MD5 f8c086a75362d61b7aaa15fade0d6480 ChangeLog 493
+MD5 ed2b1254e833925a2d6dadf5da917353 ChangeLog 586
+MD5 e3192701811e5be2d23facf6db61e17f dbunit-2.0.ebuild 688
 MD5 a6ec7d7724fbd068ffb39b5be56134ed metadata.xml 157
 MD5 349aca3da8cb283fb455f576a44369b0 files/digest-dbunit-2.0 60
