@@ -1,6 +1,9 @@
 # ChangeLog for dev-java/dom4j
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/dom4j/ChangeLog,v 1.11 2004/06/24 22:25:11 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/dom4j/ChangeLog,v 1.12 2004/06/27 17:33:05 zx Exp $
+
+  27 Jun 2004; Chris Aniszczyk <zx@gentoo.org> dom4j-1.4-r1.ebuild:
+  Marking stable on ppc
 
 *dom4j-1.4-r1 (03 May 2004)
 
